# adapter

base-adapter/: README.md  release-apk.bat  release-jar.bat  settings.gradle
base-adapter/Resholder3.0/: build.gradle  local.properties
base-adapter/Resholder3.0/.svn/: wc.db
base-adapter/Resholder3.0/release/: output.json
base-adapter/Restxz/: build.gradle  local.properties
base-adapter/Restxz/.svn/: wc.db
base-adapter/Restxz/release/: output.json
base-adapter/Restxz/res/drawable/: selector_float.xml
base-adapter/Restxz/res/layout/: smart_handy_logo_view.xml
base-adapter/TXZAdapter/: build.gradle  proguard-rules.pro
base-adapter/TXZAdapter/src/main/: AndroidManifest.xml
base-adapter/TXZAdapter/src/main/res/layout/: activity_main.xml
base-adapter/TXZAdapter2.0/: build.gradle
base-adapter/TXZAdapter2.0/debug/: calltest-debug.apk  dada.apk  output.json
base-adapter/TXZAdapter2.0/release/apk/: ResHolder.apk
base-adapter/TXZAdapter2.0/src/main/: AndroidManifest.xml
base-adapter/TXZAdapter2.0/src/main/assets/: res_txz_adapter_cmd_keywords.json
base-adapter/TXZAdapter2.0/src/main/cpp/: CMakeLists.txt  native-lib.cpp
base-adapter/TXZAdapter2.0/src/main/cpp/fm_1388/: fm_fm1388.c  fm_fm1388.h
base-adapter/TXZAdapter2.0/src/main/cpp/fm_1388/libfm1388/: libfm1388.c
base-adapter/TXZAdapter2.0/src/main/cpp/fm_1388/libfmrec_1388/: fm_wav.c  libfmrec.c
base-adapter/TXZAdapter2.0/src/main/cpp/fvm/: CxFlash.cpp  CxFlash.h  capehostx.cpp  capehostx.h  command.h  cxdish.cpp  getcxFlash.h  host_depend.cpp
base-adapter/TXZAdapter2.0/src/main/cpp/main/: DeviceManager.cpp  DeviceManager.h  JNIHelper.cpp  JNIHelper.h
base-adapter/TXZAdapter2.0/src/main/cpp/util/: Log.h
base-adapter/TXZAdapterAIDL/: build.gradle
base-adapter/TXZAdapterAIDL/src/main/: AndroidManifest.xml
base-adapter/appc/: build.gradle
base-adapter/appc/src/main/: AndroidManifest.xml
base-adapter/calltest/: build.gradle
base-adapter/calltest/release/: app-release.apk  output-metadata.json
base-adapter/calltest/src/main/: AndroidManifest.xml
base-adapter/doc/: 【同行者】项目标准需求协议表-广播.xlsx  【同行者】项目标准需求协议表-源格式.xlsx  【同行者】项目标准需求协议表-车机版AIDL.docx  【同行者】项目标准需求协议表-车机版广播.docx
base-adapter/gradle/wrapper/: gradle-wrapper.properties
base-adapter/tools/.svn/: wc.db
base-adapter/week2/: build.gradle
base-adapter/week2/src/main/: AndroidManifest.xml
(+124 files in other folders)
